@@ -28,6 +28,9 @@ Changes that could break older environments:
   this may yield different results on filesystems that support
   symbolic links.
 
+* The output generated by the xml formatter for <junit> has changed
+  again, it doesn't format the numeric value in the time attribute anymore.
+
 Other changes:
 --------------
 
@@ -114,6 +117,8 @@ Other changes:
 
 * <available> has a new filepath attribute/nested element that allows
   you top search for a file in a given path.
+
+* <junit> can now optionally set a property on test failure.
 
 Fixed bugs:
 -----------
